--- a/app/src/main/res/xml/app_timeline_widget_glance.xml
+++ b/app/src/main/res/xml/app_timeline_widget_glance.xml
@@ -11,5 +11,6 @@
     android:targetCellHeight="2"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"
-
+    android:configure="edu.brunteless.timeline.widget.WidgetLoginActivity"
+    android:widgetFeatures="reconfigurable"
     tools:ignore="UnusedAttribute" />
